# qtype

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_ROADMAP.md  LICENSE  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  dsl_changes.md  import_dependencies.mermaid  index.html  mcp-approach.md  mkdocs.yml  mypy_output  pyproject.toml  uv.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/agents/: create-howto-example.chatmode.md  documentation-writer.chatmode.md
.github/chatmodes/: create-gallery-example.chatmode.md  documentation-writer.chatmode.md
.github/workflows/: build-static-site.yml  ci.yml  copilot-setup-steps.yml  deploy-mkdocs.yml  generate-schema.yml  github_workflows_generate-schema.yml  pr-checks.yml  publish-pypi.yml  publish-testpypi.yml  test-template.yml
.instructions/: concept-page-generation.md
.specify/memory/: constitution.md
DSL-Reference/APITool/: index.html
DSL-Reference/Agent/: index.html
DSL-Reference/Application/: index.html
DSL-Reference/ArrayTypeDefinition/: index.html
DSL-Reference/AuthorizationProvider/: index.html
DSL-Reference/AuthorizationProviderList/: index.html
DSL-Reference/Condition/: index.html
DSL-Reference/Decoder/: index.html
DSL-Reference/DecoderFormat/: index.html
DSL-Reference/Document/: index.html
DSL-Reference/DocumentIndex/: index.html
DSL-Reference/DocumentSearch/: index.html
DSL-Reference/EmbeddingModel/: index.html
DSL-Reference/Flow/: index.html
DSL-Reference/Index/: index.html
DSL-Reference/IndexList/: index.html
DSL-Reference/LLMInference/: index.html
DSL-Reference/Memory/: index.html
DSL-Reference/Model/: index.html
DSL-Reference/ModelList/: index.html
DSL-Reference/ObjectTypeDefinition/: index.html
DSL-Reference/PromptTemplate/: index.html
DSL-Reference/PythonFunctionTool/: index.html
DSL-Reference/Search/: index.html
DSL-Reference/Step/: index.html
DSL-Reference/StructuralTypeEnum/: index.html
DSL-Reference/TelemetrySink/: index.html
DSL-Reference/Tool/: index.html
DSL-Reference/ToolList/: index.html
DSL-Reference/TypeDefinitionBase/: index.html
DSL-Reference/TypeList/: index.html
DSL-Reference/Variable/: index.html
DSL-Reference/VariableList/: index.html
DSL-Reference/VectorIndex/: index.html
DSL-Reference/VectorSearch/: index.html
common/: aws.bedrock.models.qtype.yaml  time-tools.qtype.yaml  tools.qtype.yaml
contributing/: index.html
docs/: .pages  contributing.md  index.md  plugins.md  roadmap.md
docs/Concepts/: .pages  authorization-provider.md  flow.md  index-concept.md  memory.md  mental-model-and-philosophy.md  model.md  step.md  telemetry.md  tool.md  variable.md
docs/Contributing/: .pages  index.md
docs/DSL-Reference/: APITool.md  Agent.md  Application.md  ArrayTypeDefinition.md  Decoder.md  Document.md  DocumentIndex.md  DocumentSearch.md  Flow.md  IndexList.md  LLMInference.md  Memory.md  ModelList.md  ObjectTypeDefinition.md  PromptTemplate.md  PythonFunctionTool.md
docs/Development/: contributing.md  roadmap.md
docs/Examples/: 01-simple-chat-bot.md  02-simple-agent.md  03-rag-chatbot.md  rag.mmd
docs/Gallery/: dataflow_pipelines.md  recipe_chatbot.md  recipe_chatbot.mermaid  research_assistant.md  simple_chatbot.md
docs/Getting Started/: 01-chatbot-example.md  02-complete-example.md  chatbot-example.md  complete-example.md  custom-types.md  domain-types.md  file-inclusion.md  flow-control.md  importing_tools.md  index.md  installation.md  reference-by-id.md  simple-chatbot-example.md  telemetry.md  visualizing-applications.md
docs/How-To Guides/: .pages
docs/Reference/: .pages  cli.md  plugins.md  secret-reference-fields.md  semantic-validation-rules.md
docs/Steps/: api-tool.md
docs/Tutorials/: .pages  01-first-chatbot.md  01-first-qtype-application.md  02-conversational-chatbot.md  03-structured-data.md  03-tools-and-function-calling.md  04-data-processing-pipelines.md  04-tools-and-function-calling.md  05-multi-flow-applications.md  06-rag-document-system.md  index.md  (+6 more)
examples/: audio.qtype.yaml  chat_with_telemetry.qtype.yaml  chat_with_telemetry_bedrock.qtype.yaml  demo_with_retriever.yaml  echo.qtype.yaml  echo_audio.qtype.yaml  echo_file.qtype.yaml  echo_thinking.qtype.yaml  hello_world.qtype.yaml  hello_world_bedrock.qtype.yaml  hello_world_bedrock_chatmessage.qtype.yaml  hello_world_chat.qtype.yaml  hello_world_chat_bedrock.qtype.yaml  hello_world_openai.qtype.yaml  rag.qtype.yaml  simple_agent.qtype.yaml  simple_agent_complete.qtype.yaml  video.qtype.yaml
plugins/: index.html
qtype/: cli.py  loader.py  util.py
roadmap/: index.html
schema/: qtype.schema.json
scripts/: generate_schema.py  validate.py
search/: search_index.json
template/: cookiecutter.json
template/{{cookiecutter.__slug}}/: Dockerfile  README.md  pyproject.toml  {{cookiecutter.__slug}}.qtype.yaml  {{cookiecutter.__slug}}.tools.qtype.yaml
template/{{cookiecutter.__slug}}/{{cookiecutter.__module}}/: __init__.py  tools.py
tests/: __init__.py  conftest.py  test_application_facade.py  test_aws_auth.py  test_batch_flow.py  test_batch_utils.py  test_dsl_loader.py  test_dsl_validation.py  test_file_sink_source.py  test_generic_auth.py  test_ir_resolution.py  test_list_type.py  test_loader.py  test_loader_file_inclusion.py  test_semantic_generator.py  test_semantic_resolver.py  test_semantic_validation.py  test_semantic_validation_circular_dependency.py  test_semantic_validation_flow_validation.py  test_semantic_validation_memory_usage.py  test_semantic_validation_model_rules.py  test_semantic_validation_prompt_requirements.py  test_semantic_validation_referential_integrity.py  test_semantic_validation_telemetry_rules.py  test_semantic_validation_tooling_rules.py  test_semantic_validation_unique_ids.py  test_sql_source.py  test_telemetry_ir_resolution.py  test_tool_provider_python_module.py  test_tools_from_module.py  test_visualize.py
ui/: astro.config.mjs  eslint.config.mjs  next.config.ts  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+614 files in other folders)
