[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.__slug }}"
version = "0.0.1"
description = "{{ cookiecutter.project_name }} - A QType AI Application"
requires-python = ">=3.10"
dependencies = [
    "qtype[interpreter,mcp]",
]

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.__module }}"]

[tool.uv]
package = true
